Adding new endpoints for articles
