# src/routes/contentRoutes.ts
@@ -1,8 +1,10 @@
 import express, { Router } from 'express';
-import { createArticle } from '../controllers/articleController';
+import { createArticle, deleteArticle, getArticle } from '../controllers/articleController';
 
 const contentRouter: Router = express.Router();
 
 contentRouter.post('/article', createArticle);
+contentRouter.get('/article/:id', getArticle);
+contentRouter.delete('/article/:id', deleteArticle);
 
 export default contentRouter;
